--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
       <h2>Welcome Back!</h2>
       <div class="input-group">
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
+        <input type="text" id="username" name="username" value="user123" required>
       </div>
       <div class="input-group">
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" name="password" value="123" required>
       </div>
       <!-- Modified button using anchor tag -->
       <a href="dashboard.html">
