--- a/dashboard.html
+++ b/dashboard.html
@@ -2,101 +2,64 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Dashboard</title>
+  <title>General Journal</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 20px;
-      background-color: #f5f5f5;
+      background-image: url('https://images2.alphacoders.com/131/1318485.png');
+      background-size: cover;
+      background-repeat: no-repeat;
+      color: white;
     }
     h1 {
       text-align: center;
     }
-    .container {
-      width: 400px;
+    .table-container {
+      max-width: 800px;
       margin: 0 auto;
-      background-color: #fff;
-      padding: 20px;
+      border: 2px solid black;
       border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      overflow-x: auto;
+      background-color: white;
+      padding: 20px;
     }
-    label {
-      display: block;
-      margin-bottom: 5px;
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      border: 4px solid black;
+      color: black;
     }
-    input[type="text"],
-    textarea,
-    select,
-    input[type="date"] {
-      width: calc(100% - 12px);
-      padding: 8px;
-      margin-bottom: 15px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-    }
-    button {
-      padding: 10px 20px;
-      border: none;
-      background-color: #4CAF50;
-      color: white;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #45a049;
-    }
-    .journal-entry {
-      background-color: #f9f9f9;
-      border-radius: 4px;
+    th, td {
+      border: 2px solid black;
       padding: 10px;
-      margin-bottom: 10px;
+      text-align: left;
+    }
+    th {
+      background-color: #f2f2f2;
     }
   </style>
 </head>
 <body>
-  <h1>Accounting Form</h1>
-  <div class="container">
-    <label for="transactionDate">Date:</label>
-    <input type="date" id="transactionDate">
-
-    <label for="transactionAmount">Amount:</label>
-    <input type="text" id="transactionAmount" placeholder="₱ Enter amount">
-
-    <label for="transactionDescription">Transaction Description:</label>
-    <textarea id="transactionDescription" rows="4" placeholder="Enter transaction details"></textarea>
-
-    <button onclick="submitTransaction()">Submit</button>
-
-    <div id="journalOutput">
-      <!-- Accounting journal entries will be displayed here -->
-    </div>
+  <h1>General Journal</h1>
+  <div class="table-container">
+    <table>
+      <!-- Your table content here -->
+      <!-- Example rows -->
+      <tr>
+        <th>Date</th>
+        <th>Account Titles and Explanation</th>
+        <th>Debit</th>
+        <th>Credit</th>
+      </tr>
+      <tr>
+        <td>2018</td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <!-- Add more rows here -->
+    </table>
   </div>
-
-  <script>
-    function submitTransaction() {
-      const date = document.getElementById('transactionDate').value;
-      const amount = document.getElementById('transactionAmount').value;
-      const description = document.getElementById('transactionDescription').value;
-
-      // Format date as "Month, Date, Year"
-      const formattedDate = new Date(date).toLocaleDateString('en-US', {
-        month: 'long',
-        day: 'numeric',
-        year: 'numeric'
-      });
-
-      const entry = `<div class="journal-entry">
-                      <p><strong>Date:</strong> ${formattedDate}</p>
-                      <p><strong>Amount:</strong> ${amount}</p>
-                      <p><strong>Description:</strong> ${description}</p>
-                    </div>`;
-
-      const journalOutput = document.getElementById('journalOutput');
-      journalOutput.insertAdjacentHTML('beforeend', entry);
-
-      // You can perform further operations here like sending this data to a server/database.
-      // For this example, it's just displayed in the journalOutput.
-    }
-  </script>
 </body>
 </html>
