--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background-image: url('background-image.jpg'); /* Replace with your image file */
+      background-image: url('https://images2.alphacoders.com/131/1318485.png'); /* Replace with your image file */
       background-size: cover;
       background-position: center;
       font-family: Arial, sans-serif;
