--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
     .start-button:hover {
       background-color: #0056b3;
     }
+
+    .group-members {
+      text-align: center;
+      margin-top: 40px;
+    }
+
+    .member {
+      margin-bottom: 10px;
+      display: block;
+    }
   </style>
 </head>
 <body>
@@ -62,6 +72,15 @@
     <div class="instructions">
       <h2>Installation Instructions</h2>
       <p>Provide step-by-step installation instructions or a link to the installation guide.</p>
+    </div>
+
+    <div class="group-members">
+      <h2>Group Members</h2>
+      <div class="member">John Manuel Planas</div>
+      <div class="member">Natasha Dinopol</div>
+      <div class="member">Victorjohn Paran</div>
+      <div class="member">Margarita Bacarisas</div>
+      <div class="member">Adrianne Tejares</div>
     </div>
   </div>
 </body>
