--- a/dashboard.html
+++ b/dashboard.html
@@ -81,14 +81,18 @@
     <div class="dashboard-section">
       <h2>Financial Tools</h2>
       <div class="button-row">
-        <a href="general_journal.html" class="dashboard-button">General Journal</a>
-        <a href="balance_sheet.html" class="dashboard-button">Balance Sheet</a>
+        <a href="journal.html" class="dashboard-button">General Journal</a>
+        <a href="ledger.html" class="dashboard-button">Ledger (T accounts)</a>
         <a href="income_statement.html" class="dashboard-button">Income Statement</a>
+      </div>
+      <div class="button-row">
+        <a href="cash_flow_statement.html" class="dashboard-button">Cash Flow Statement</a>
+        <a href="ledger.html" class="dashboard-button">Ledger</a>
+        <a href="financial_ratios.html" class="dashboard-button">Financial Ratios</a>
       </div>
     </div>
 
     <!-- Other sections can be added here for transactions, charts, etc. -->
-
   </div>
 
   <footer>
