--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>New Software Deployment</title>
+  <title>Financial Accounting Calculator</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -20,58 +20,71 @@
     .container {
       max-width: 600px;
       background-color: rgba(255, 255, 255, 0.9);
-      padding: 40px;
+      padding: 20px;
       border-radius: 8px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
       text-align: center;
+      transition: transform 0.3s ease;
+      height: 70%;
+      overflow: auto;
+      margin-top: -50px;
     }
 
     h1 {
-      margin-bottom: 20px;
+      margin-bottom: 10px;
       color: #333;
+      font-size: 1.8em; /* Slightly smaller font size for h1 */
     }
 
     p {
       color: #555;
       line-height: 1.6;
-      margin-bottom: 25px;
+      margin-bottom: 15px;
+      font-size: 1em; /* Slightly smaller font size for paragraphs */
     }
 
     .start-button {
       display: inline-block;
-      padding: 15px 30px;
+      padding: 8px 16px; /* Adjusting padding for the button */
       background-color: #007bff;
       color: #fff;
       text-decoration: none;
       border-radius: 6px;
       transition: background-color 0.3s ease;
+      font-size: 0.9em; /* Slightly smaller font size for the button */
     }
 
     .start-button:hover {
       background-color: #0056b3;
     }
 
+    .instructions {
+      margin-top: 15px;
+    }
+
     .group-members {
-      text-align: center;
-      margin-top: 40px;
+      margin-top: 20px;
     }
 
     .member {
-      margin-bottom: 10px;
+      margin-bottom: 8px;
       display: block;
+      color: #777;
+      font-size: 0.8em; /* Slightly smaller font size for group members */
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>New Software Deployment</h1>
-    <p>Description of the software goes here. Explain the key features and benefits.</p>
+    <h1>Financial Accounting Calculator</h1>
+    <p>This app will show the Accounting Steps and Processes on a certain Financial Account.</p>
 
     <a href="dashboard.html" class="start-button">Start Now</a>
 
     <div class="instructions">
-      <h2>Installation Instructions</h2>
-      <p>Provide step-by-step installation instructions or a link to the installation guide.</p>
+      <h2>Instructions</h2>
+      <p>Just press the button above, and it will route you to the dashboard.</p>
+      <p>Merry Christmas and Happy New Year.</p>
     </div>
 
     <div class="group-members">
