--- a/dashboard.html
+++ b/dashboard.html
@@ -83,7 +83,7 @@
       <div class="button-row">
         <a href="journal.html" class="dashboard-button">General Journal</a>
         <a href="ledger.html" class="dashboard-button">Ledger (T accounts)</a>
-        <a href="income_statement.html" class="dashboard-button">Income Statement</a>
+        <a href="trialbalance.html" class="dashboard-button">Trial Balance</a>
       </div>
       <div class="button-row">
         <a href="cash_flow_statement.html" class="dashboard-button">Cash Flow Statement</a>
