--- a/trialbalance.html
+++ b/trialbalance.html
@@ -160,5 +160,13 @@
       </tr>
     </tbody>
   </table>
+    
+    <script>
+    function goBack() {
+      window.history.back();
+    }
+  </script>
+
+    
 </body>
 </html>
